--- a/Resources/Private/Templates/Backend/Oauth2LoginProvider.html
+++ b/Resources/Private/Templates/Backend/Oauth2LoginProvider.html
@@ -10,12 +10,12 @@
                 <f:then>
                     <f:for each="{providers}" as="provider">
                         <button type="submit" class="btn btn-block btn-login" name="oauth2-provider" value="{provider.identifier}">
-                            <core:icon identifier="{provider.iconIdentifier}" size="default"/> <f:translate key="{provider.label}" default="{provider.label}" />
+                            <core:icon identifier="{provider.iconIdentifier}" size="default"/> <f:translate id="{provider.label}" default="{provider.label}" />
                         </button>
                     </f:for>
                 </f:then>
                 <f:else>
-                    <f:translate key="LLL:EXT:oauth2_client/Resources/Private/Language/locallang_be.xlf:oauth2Providers.notAvailable" />
+                    <f:translate id="LLL:EXT:oauth2_client/Resources/Private/Language/locallang_be.xlf:oauth2Providers.notAvailable" />
                 </f:else>
             </f:if>
         </div>
