--- a/Resources/Private/Templates/Frontend/ManageProviders/List.html
+++ b/Resources/Private/Templates/Frontend/ManageProviders/List.html
@@ -4,8 +4,8 @@
 
 <f:section name="Content">
     <f:if condition="{providers}">
-        <h2><f:translate key="manage_providers.title" /></h2>
-        <p><small><f:translate key="manage_providers.description" /></small></p>
+        <h2><f:translate id="manage_providers.title" /></h2>
+        <p><small><f:translate id="manage_providers.description" /></small></p>
 
         <ul class="list-group">
             <f:for each="{providers}" as="provider" key="identifier">
